<resources>
    <string name="app_name">Learning OOP</string>
    <string name="facebook_app_id">251889832229968</string>
    <string name="fb_login_protocol_scheme">fb251889832229968</string>
    <string name="welcome">Login</string>
    <string name="sing_up"><Data><![CDATA[ Don\'t have an account? Sign up <u>here</u>! ]]></Data></string>
    <string name="test">Test</string>
    <string name="learn">Learn</string>
    <string name="profile">Profile</string>
    <string name="hello_user">Hello user</string>
    <string name="learn_progress">Learn progress: </string>
    <string name="test_progress">Test progress: </string>
    <string name="test_1">Test 1</string>
    <string name="test_2">Test 2</string>
    <string name="test_3">Test 3</string>
    <string name="test_4">Test 4</string>
    <string name="test_5">Test 5</string>
    <string name="test_random">Random test</string>
    <string name="save_changes">Save changes</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="deleteall_accounts">Delete accounts</string>
    <string name="baselvl_text"><u>BASE LEVEL</u></string>
    <string name="lvl1_text"><u>LEVEL 1</u></string>
    <string name="lvl2_txt"><u>LEVEL 2</u></string>
    <string name="lvl3_txt"><u>LEVEL 3</u></string>
    <string name="lvl4_txt"><u>LEVEL 4</u></string>
    <string name="next_lvl1">Go to level 1!</string>
    <string name="next_lvl2">Go to level 2!</string>
    <string name="next_lvl3">Go to level 3!</string>
    <string name="next_lvl4">Go to level 4!</string>
    <string name="next_menu">Go to learn menu.</string>
    <string name="learn11">Introduction to Java</string>
    <string name="learn12">Java compilers</string>
    <string name="learn13">First program</string>
    <string name="learn14">Comments</string>
    <string name="learn15">Variables</string>
    <string name="learn16">Basic operators</string>
    <string name="learn21">User input</string>
    <string name="learn22">If statement</string>
    <string name="learn23">Else statement</string>
    <string name="learn24">Else if statement</string>
    <string name="learn25">Other operators</string>
    <string name="learn26">Switch statement</string>
    <string name="learn31">While loop</string>
    <string name="learn32">Do while loop</string>
    <string name="learn33">Arrays</string>
    <string name="learn34">For loop</string>
    <string name="learn35">For and arrays</string>
    <string name="learn36">For each loop</string>
    <string name="learn41">OOP</string>
    <string name="learn42">Attributes</string>
    <string name="learn43">Methods</string>
    <string name="learn44">Constructor</string>
    <string name="learn45">Objects</string>
    <string name="learn46">More on Objects</string>
    <string name="learn51">Static</string>
    <string name="learn52">Access modifiers and Encapsulation</string>
    <string name="learn53">Final and Inheritance</string>
    <string name="learn54">Polymorphism</string>
    <string name="learn55">Abstract class</string>
    <string name="learn56">Interface</string>
    <string name="learn011"><Data><![CDATA[
        <h2>Introduction</h2>
        <b> &emsp Java</b> is a high-level object oriented programing language, created by a team led by James Gosling for Sun Microsystems in the early 90\' but now is owned by Oracle.
        <br/><br/> &emsp <b>High-level</b> means that it use natural language elements which are easier to be understood by humans.
        <br/><br/> &emsp <b>Object oriented</b> means that is based on the concept of \"objects\".
        ]]></Data></string>
    <string name="learn014"><![CDATA[ What is <b>Java</b>? ]]></string>
    <string name="learn0140">a high-level programing language</string>
    <string name="learn0141">a high-level programing language</string>
    <string name="learn0142">a low-level programing language</string>
    <string name="learn0143">a markup language</string>
    <string name="learn021"><Data><![CDATA[
        <h2>Compilers</h2>
        &emsp In order to run a Java program you need to download the <b>JDK</b> (Java Development Kit) from <u>\'www.oracle.com\'</u> and a <b>compiler</b>.
         <br/><br/>
        &emsp After downloading and installing the JDK, go in the installation folder and copy the path, it should look something like \'C:\\Program Files\\Java\\jdk-9.0.4\\bin\'.
         <br/><br/>
        &emsp Then add the path to the \'System variables\' in \'Environment variables\' from the \'Advanced\' section of \'System Properties\'.
       ]]></Data></string>
    <string name="learn022"><![CDATA[
        &emsp If the path of the JDK is set, the next step is to download and install a compiler.
        <br/><br/>
        &emsp A Java compiler is a program that takes the text file work of a developer and compiles it into a platform-independent Java file.
         <br/><br/>
        &emsp Java compilers include the Java Programming Language Compiler (javac), the GNU Compiler for Java (GCJ), the Eclipse Compiler for Java (ECJ) and Jikes.
         ]]></string>
    <string name="learn024"><![CDATA[  What do <b>JDK</b> stands for?  ]]></string>
    <string name="learn0240">Java Development Kit</string>
    <string name="learn0241">Java Developer Kit</string>
    <string name="learn0242">Java Development Key</string>
    <string name="learn0243">Java Development Kit</string>
    <string name="learn031"><Data><![CDATA[
     <h2>First program</h2>
     &emsp After installing the <b>JDK</b> and a <b>compiler</b> we are ready to write the first program.
    <br/><br/> &emsp First we need to open the compiler and create a new project and a new class or just open the Notepad/Notepad++ and write the code below. The name file must be saved with the class method and with the extension java like \'FirstClass.java\'.
    ]]></Data></string>
    <string name="learn032"><Data><![CDATA[ &emsp Every java program must have:
     <br/> 1. a <b><u>class</u></b>:
     <br/>      &emsp -is the first thing you will write when you create a java program
     <br/>       &emsp -the name of that class is usually capitalized
     <br/> 2. a <b><u>main</u></b> method:
     <br/>      &emsp -a method is like a list of things that the compiler need to do
     <br/>      &emsp -whenever a java program is running, the computer look for the main method
    ]]></Data></string>
    <string name="learn033"><Data><![CDATA[ &emsp After you wrote the code, run the program in your compiler.
    <br/><br/> &emsp If you wrote it in Notepad, open the \'Command Prompt\' in the folder you saved the file and write the command \'javac FirstClass.java\'.
    <br/><br/> &emsp This will compile your program and create a file named FirstClass.class.
    <br/><br/> &emsp In order to run it we need to add another line with the command \'java FirstClass\'.
    <br/><br/> &emsp This should be the result:
     ]]></Data></string>
    <string name="learn034">Which is the command you need to compile a java file?</string>
    <string name="learn0340">javac</string>
    <string name="learn0341">javac</string>
    <string name="learn0342">javacomp</string>
    <string name="learn0343">java</string>
    <string name="learn041"><Data><![CDATA[
    <h2>Comments</h2>
    &emsp Comments are lines of code that are not being compiled.
    <br/> &emsp They are included in the code by the programmers to explain what the code is doing.
    <br/><br/>Java has 3 types of comments:
    <br/>1. single-line
    <br/>2. multi-line
    <br/>3. documentation comments
    ]]></Data></string>
    <string name="learn044">What comment is this: \'//\'?</string>
    <string name="learn0440">single-line comment</string>
    <string name="learn0441">documentation comment</string>
    <string name="learn0442">multi-line comment</string>
    <string name="learn0443">single-line comment</string>
    <string name="codelearn041"><Data><![CDATA[
        <font color=#00aa00>
        // single_line comments:
        <br> // are use for commenting a single line

        <br/><br/>/* multi_line comments:
        <br> are use for commenting multiple lines*/
        </font>

        <font color=#0000dd>
        <br/><br/> /** documentation comment:
        <br/> are looking similar to multi-line comments,
        <br/> but they generate external documentation
        <br/> of the source code
        </font>

     ]]></Data></string>
    <string name="learn051"><Data><![CDATA[
    <h2>Variables</h2>
    A variable is a container that holds values.
    <br/><br/>A java variable has:
    <br/> &emsp 1. a data type
    <br/> &emsp 2. a name
    <br/> &emsp 3. a value
    <br/> <br/> <b> &emsp Syntax: </b>
    <br/> dataType variableName = value;
]]></Data></string>
    <string name="learn052"><Data><![CDATA[
    <h4><u>Data type:</u></h4>
    &emsp -if it is a whole number such -110 or 80 it will be an <b>int</b> (integer)
    <br/> &emsp -if it is a floating-point or real number such as -5.67 or 32.5623 it will be a <b>float</b> or a <b>double</b>
    <br/> &emsp -if it is a text such as \"Hello World\" it will be a String
    <br/> &emsp -and if it is a variable that signifies true or false than it will be a <b>boolean</b>
    <h4><u>Name:</u></h4>
    &emsp -the name should start with a letter and may contain a number or an underline
    <h4><u>Value:</u></h4>
    &emsp -the value must match the data type
    ]]></Data></string>
    <string name="learn054">What is a variable made of?</string>
    <string name="learn0540">data type, name and value</string>
    <string name="learn0541">data type, name and number</string>
    <string name="learn0542">data type, name and value</string>
    <string name="learn0543">name, number, value </string>
    <string name="test401">"1. What is a method?"</string>
    <string name="test4011">A state of the class</string>
    <string name="test4012">A behavior of the class</string>
    <string name="test4013">An object</string>
    <string name="test402">2. What is the output of the following code?</string>
    <string name="test4021"><Data><![CDATA[

    <font color=#990099>class</font> Apple<font color=#000099>{</font>
    <br/> &emsp <font color=#990099>int</font> dimension<font color=#000099>=</font><font color=#ff8000>10</font>  <font color=#000099>;</font>
    <br/><br/> &emsp <font color=#990099>void</font> display<font color=#000099>(){</font>
    <br/> &emsp System<font color="#000099">.</font>out<font color="#000099">.</font>println
    <font color="#000099">(this.</font>dimension<font color="#000099">);
    <br/><font color=#000099>}</font>
     </font>]]></Data></string>
    <string name="test403">3. Complete the following sentence.</string>
    <string name="test4031">A</string>
    <string name="test4032">is used to initialize an object.</string>
    <string name="test404">4. Choose the correct answer: What is an object?</string>
    <string name="test4041">an instance of the class</string>
    <string name="test4042">a set of attributes and methods</string>
    <string name="test4043">a set of classes</string>
    <string name="test405">5. Complete the following sentence.</string>
    <string name="test4051"><Data><![CDATA[ An attribute represents a]]></Data></string>
    <string name="test4052"><Data><![CDATA[ of the class. ]]></Data></string>
    <string name="forgot_pass">Forgot password</string>
    <string name="login_privacy_policy"><Data><![CDATA[Check the <u><font color=#00a0ee>privacy policy</font></u>.]]></Data></string>
</resources>