<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddd"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">


    <RelativeLayout
        android:id="@+id/test4_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <TextView
            android:id="@+id/test4_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="LEVEL 3"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/test4_done_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="DONE"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/test4_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/rounded_blue"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/test401"
                    android:textColor="#fff"
                    android:textSize="15dp" />

                <RadioGroup
                    android:id="@+id/test4_exercise1_radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/test4_exercise1_radiobtn1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/test4011"
                        android:textColor="#fff" />

                    <RadioButton
                        android:id="@+id/test4_exercise1_radiobtn2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/test4012"
                        android:textColor="#fff" />

                    <RadioButton
                        android:id="@+id/test4_exercise1_radiobtn3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/test4013"
                        android:textColor="#fff" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_blue"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/test402"
                    android:textColor="#fff"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/test4_exercise2_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/code_rounded"
                    android:padding="10dp"
                    android:text="@string/test4021" />

                <EditText
                    android:id="@+id/test4_exercise2_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="text"
                    android:maxWidth="35dp"
                    android:maxLength="2"
                    android:minWidth="30dp"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_blue"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/test403"
                    android:textColor="#fff"
                    android:textSize="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test4031"
                        android:textColor="#fff" />

                    <EditText
                        android:id="@+id/test4_exercise3_edittext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusedByDefault="false"
                        android:gravity="center"
                        android:inputType="text"
                        android:maxWidth="95dp"
                        android:maxLength="11"
                        android:minWidth="90dp"
                        android:singleLine="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test4032"
                        android:textColor="#fff" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_blue"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/test404"
                    android:textColor="#fff"
                    android:textSize="15sp" />

                <RadioGroup
                    android:id="@+id/test4_exercise4_radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/test4_exercise4_radiobtn1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test4041"
                        android:textColor="#fff" />

                    <RadioButton
                        android:id="@+id/test4_exercise4_radiobtn2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test4042"
                        android:textColor="#fff" />

                    <RadioButton
                        android:id="@+id/test4_exercise4_radiobtn3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test4043"
                        android:textColor="#fff" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_blue"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/test405"
                    android:textColor="#fff"
                    android:textSize="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/code_rounded"
                    android:orientation="horizontal"
                    android:padding="10dp">


                    <TextView
                        android:id="@+id/test4_exercise5_textview1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test4051" />


                    <EditText
                        android:id="@+id/test4_exercise5_edittext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusedByDefault="false"
                        android:gravity="center"
                        android:inputType="text"
                        android:maxWidth="50dp"
                        android:maxLength="5"
                        android:minWidth="45dp"
                        android:singleLine="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/test4_exercise5_textview2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test4052" />


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</RelativeLayout>