<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_blueline_top"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="240dp"
            android:src="@drawable/learning_oop" />

        <!--facebook login-->
        <RelativeLayout
            android:id="@+id/login_facebook"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:background="@drawable/blue_rounded_solid" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/facebook" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="Login with Facebook"
                    android:textColor="#fff"
                    android:textSize="15sp" />

            </LinearLayout>

        </RelativeLayout>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_transparent"
            android:fontFamily="@font/lato_regular"
            android:hint="email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_transparent"
            android:fontFamily="@font/lato_regular"
            android:hint="password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_transparent"
            android:fontFamily="@font/lato_regular"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="@color/colorBlue"
            android:textSize="15sp" />

        <Button
            android:id="@+id/login_send_btn"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_transparent"
            android:fontFamily="@font/lato_regular"
            android:text="Send email"
            android:textAllCaps="false"
            android:textColor="@color/colorBlue"
            android:textSize="15sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/login_back_btn"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_transparent"
            android:fontFamily="@font/lato_regular"
            android:text="Back to login"
            android:textAllCaps="false"
            android:textColor="@color/colorBlue"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/login_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/forgot_pass"
            android:textColor="@color/colorGray" />

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/sing_up"
            android:textColor="@color/colorGray" />

        <TextView
            android:id="@+id/login_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/login_privacy_policy"
            android:textColor="@color/colorGray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp" />
    </LinearLayout>

</ScrollView>